--- a/app/onlinework/index.html
+++ b/app/onlinework/index.html
@@ -1,146 +1,101 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title></title>
-    <script src="js/mui.min.js"></script>
-    <link href="css/mui.min.css" rel="stylesheet"/>
-    <script type="text/javascript" charset="utf-8">
-      	mui.init();
-    </script>
-</head>
-<body>
-	<!-- 主界面菜单同时移动 -->
-	    <!-- 侧滑导航根容器 -->
-	    <div class="mui-off-canvas-wrap mui-draggable">
-	        <!-- 主页面容器 -->
-	        <div class="mui-inner-wrap">
-	            <!-- 菜单容器 -->
-	            <aside class="mui-off-canvas-left" id="offCanvasSide">
-	                <div class="mui-scroll-wrapper">
-	                    <div class="mui-scroll">
-	                        <!-- 菜单具体展示内容 -->
-	                        
-	                    </div>
-	                </div>
-	            </aside>
-	            <!-- 主页面标题 -->
-	            <header class="mui-bar mui-bar-nav">
-	                <a class="mui-icon mui-action-menu mui-icon-bars mui-pull-left" href="#offCanvasSide"></a>
-	                <h1 class="mui-title">标题</h1>
-	            </header>
-	            <nav class="mui-bar mui-bar-tab">
-	    		    <a class="mui-tab-item mui-active">
-	    		        <span class="mui-icon mui-icon-home"></span>
-	    		        <span class="mui-tab-label">首页</span>
-	    		    </a>
-	    		    <a class="mui-tab-item">
-	    		        <span class="mui-icon mui-icon-phone"></span>
-	    		        <span class="mui-tab-label">电话</span>
-	    		    </a>
-	    		    <a class="mui-tab-item">
-	    		        <span class="mui-icon mui-icon-email"></span>
-	    		        <span class="mui-tab-label">邮件</span>
-	    		    </a>
-	    		    <a class="mui-tab-item">
-	    		        <span class="mui-icon mui-icon-gear"></span>
-	    		        <span class="mui-tab-label">设置</span>
-	    		    </a>
-	    		</nav>
-	            <!-- 主页面内容容器 -->
-	            <div class="mui-content mui-scroll-wrapper">
-	                <div class="mui-scroll">
-	                    <!-- 主界面具体展示内容 -->
-	                    <div id="slider" class="mui-slider" >
-	                      <div class="mui-slider-group mui-slider-loop">
-	                        <!-- 额外增加的一个节点(循环轮播：第一个节点是最后一张轮播) -->
-	                        <div class="mui-slider-item mui-slider-item-duplicate">
-	                          <a href="#">
-	                            <img src="http://placehold.it/400x300">
-	                          </a>
-	                        </div>
-	                        <!-- 第一张 -->
-	                        <div class="mui-slider-item">
-	                          <a href="#">
-	                            <img src="http://placehold.it/400x300">
-	                          </a>
-	                        </div>
-	                        <!-- 第二张 -->
-	                        <div class="mui-slider-item">
-	                          <a href="#">
-	                            <img src="http://placehold.it/400x300">
-	                          </a>
-	                        </div>
-	                        <!-- 第三张 -->
-	                        <div class="mui-slider-item">
-	                          <a href="#">
-	                            <img src="http://placehold.it/400x300">
-	                          </a>
-	                        </div>
-	                        <!-- 第四张 -->
-	                        <div class="mui-slider-item">
-	                          <a href="#">
-	                            <img src="http://placehold.it/400x300">
-	                          </a>
-	                        </div>
-	                        <!-- 额外增加的一个节点(循环轮播：最后一个节点是第一张轮播) -->
-	                        <div class="mui-slider-item mui-slider-item-duplicate">
-	                          <a href="#">
-	                            <img src="http://placehold.it/400x300">
-	                          </a>
-	                        </div>
-	                      </div>
-	                      <div class="mui-slider-indicator">
-	                        <div class="mui-indicator mui-active"></div>
-	                        <div class="mui-indicator"></div>
-	                        <div class="mui-indicator"></div>
-	                        <div class="mui-indicator"></div>
-	                      </div>
-	                    </div>
-	                	<ul class="mui-table-view mui-grid-view mui-grid-9">
-	                	<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
-	                	    <a href="#">
-	                	        <span class="mui-icon mui-icon-home"></span>
-	                	        <div class="mui-media-body">Home</div>
-	                	    </a>
-	                	</li>
-	                	<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
-	                	    <a href="#">
-	                	        <span class="mui-icon mui-icon-email"><span class="mui-badge mui-badge-red">5</span></span>
-	                	        <div class="mui-media-body">Email</div>
-	                	    </a>
-	                	</li>
-	                	<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
-	                	    <a href="#">
-	                	        <span class="mui-icon mui-icon-chatbubble"></span>
-	                	        <div class="mui-media-body">Chat</div>
-	                	    </a>
-	                	</li>
-	                	<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
-	                	    <a href="#">
-	                	        <span class="mui-icon mui-icon-location"></span>
-	                	        <div class="mui-media-body">Location</div>
-	                	    </a>
-	                	</li>
-	                	<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
-	                	    <a href="#">
-	                	        <span class="mui-icon mui-icon-search"></span>
-	                	        <div class="mui-media-body">Search</div>
-	                	    </a>
-	                	</li>
-	                	<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
-	                	    <a href="#">
-	                	        <span class="mui-icon mui-icon-phone"></span>
-	                	        <div class="mui-media-body">Phone</div>
-	                	    </a>
-	                	</li>
-	                	    </ul>
-	                	
-	                </div>
-	            </div>
-	       	 <div class="mui-off-canvas-backdrop"></div>
-	        </div>
-	    </div>
-</body>
+
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<title></title>
+		<link href="css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="css/icons-extra.css"/>
+	</head>
+
+	<body>
+		<nav class="mui-bar mui-bar-tab">
+		    <a class="mui-tab-item mui-active" href="home.html">
+		        <span class="mui-icon mui-icon-home"></span>
+		        <span class="mui-tab-label">首页</span>
+		    </a>
+		    <a class="mui-tab-item" href="message.html">
+		        <span class="mui-icon mui-icon-chatbubble"><span class="mui-badge">8</span></span>
+		        <span class="mui-tab-label">消息</span>
+		    </a>
+		    <a class="mui-tab-item" href="info.html">
+		        <span class="mui-icon mui-icon-email"></span>
+		        <span class="mui-tab-label">资讯</span>
+		    </a>
+		    <a class="mui-tab-item" href="person.html">
+		        <span class="mui-icon mui-icon-person"></span>
+		        <span class="mui-tab-label">我的</span>
+		    </a>
+		</nav>
+		
+		
+		<script src="js/mui.min.js"></script>
+		<script type="text/javascript" charset="utf-8">
+			//mui初始化
+			mui.init();
+			var subpages = ['home.html', 'message.html', 'info.html', 'person.html'];
+			var subpage_style = {
+				top: '0px',
+				bottom: '51px'
+			};
+			
+			var aniShow = {};
+			
+			 //创建子页面，首个选项卡页面显示，其它均隐藏；
+			mui.plusReady(function() {
+				var self = plus.webview.currentWebview();
+				for (var i = 0; i < 4; i++) {
+					var temp = {};
+					var sub = plus.webview.create(subpages[i], subpages[i], subpage_style);
+					if (i > 0) {
+						sub.hide();
+					}else{
+						temp[subpages[i]] = "true";
+						mui.extend(aniShow,temp);
+					}
+					self.append(sub);
+				}
+			});
+			 //当前激活选项
+			var activeTab = subpages[0];
+			var title = document.getElementById("title");
+			 //选项卡点击事件
+			mui('.mui-bar-tab').on('tap', 'a', function(e) {
+				var targetTab = this.getAttribute('href');
+				if (targetTab == activeTab) {
+					return;
+				}
+				//更换标题
+//				title.innerHTML = this.querySelector('.mui-tab-label').innerHTML;
+				//显示目标选项卡
+				//若为iOS平台或非首次显示，则直接显示
+				if(mui.os.ios||aniShow[targetTab]){
+					plus.webview.show(targetTab);
+				}else{
+					//否则，使用fade-in动画，且保存变量
+					var temp = {};
+					temp[targetTab] = "true";
+					mui.extend(aniShow,temp);
+					plus.webview.show(targetTab,"fade-in",300);
+				}
+				//隐藏当前;
+				plus.webview.hide(activeTab);
+				//更改当前活跃的选项卡
+				activeTab = targetTab;
+			});
+			 //自定义事件，模拟点击“首页选项卡”
+			document.addEventListener('gohome', function() {
+				var defaultTab = document.getElementById("defaultTab");
+				//模拟首页点击
+				mui.trigger(defaultTab, 'tap');
+				//切换选项卡高亮
+				var current = document.querySelector(".mui-bar-tab>.mui-tab-item.mui-active");
+				if (defaultTab !== current) {
+					current.classList.remove('mui-active');
+					defaultTab.classList.add('mui-active');
+				}
+			});
+		</script>
+	</body>
 </html>
