--- a/app/onlinework/home.html
+++ b/app/onlinework/home.html
@@ -70,7 +70,7 @@
 								<!-- 额外增加的一个节点(循环轮播：最后一个节点是第一张轮播) -->
 								<div class="mui-slider-item mui-slider-item-duplicate">
 									<a href="#">
-										<img src="http://placehold.it/400x300">
+										<img src="img/muwu.jpg">
 									</a>
 								</div>
 							</div>
